# AntonIA

./: .gitignore  README.md  config.yaml  pipeline-ci.yml  pyproject.toml
config/: base.yaml
config/personas/: antonIA_cast.yaml  antonIA_cat.yaml  default.yaml
src/AntonIA/: __init__.py  cli.py  greetings.py  pipeline.py
src/AntonIA/common/: config.py  logger_setup.py
src/AntonIA/core/: image_generator.py  image_saver.py  instagram_caption_generator.py  phrase_generator.py  prompt_generator.py  retrieve_past_records.py  run_info_saver.py
src/AntonIA/services/: __init__.py  database_client.py  image_generation_client.py  llm_client.py  storage_client.py
src/AntonIA/utils/: image_utils.py  load_yaml.py  prompts.py
tests/: test_greetings.py
tests/AntonIA/: test_pipeline.py
tests/AntonIA/common/: test_config.py  test_logger_setup.py
tests/AntonIA/core/: test_image_generator.py  test_image_saver.py  test_instagram_caption_generator.py  test_prompt_generator.py  test_retrieve_past_records.py  test_run_info_saver.py
tests/AntonIA/services/: test_database_client.py  test_image_generation_client.py  test_llm_client.py  test_storage_client.py
tests/AntonIA/utils/: test_image_utils.py  test_load_yaml.py  test_prompts.py
